--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
+		"@types/uuid": "^9.0.7",
 		"smui-theme": "^7.0.0-beta.15",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
@@ -23,6 +24,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"svelte-material-ui": "^7.0.0-beta.15"
+		"svelte-material-ui": "^7.0.0-beta.15",
+		"uuid": "^9.0.1"
 	}
 }
